--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-      body {
+body {
             margin: 0;
             background-color: rgb(242, 242, 242);
-            background: url("illustration-du-ciel-nocturne-de-l-anime.jpg") no-repeat;
+            background: black;
             background-attachment: fixed;
             background-position: 50% 50%;
             background-size: cover;
@@ -35,6 +35,15 @@
                 transform: scale(1);
             }
         }
+        @keyframes zoomOut {
+            from {
+                transform: scale(1);
+            }
+            to {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+        }
         .card {
             height: 230px;
             width: 350px;
@@ -43,6 +52,10 @@
             background-color: rgb(240, 239, 239);
             border-left: 6px solid rgb(35, 7, 119);
             animation: zoomIn 0.3s ease-in-out;
+        }
+
+        .zoom-out {
+            animation: zoomOut 0.3s ease-in-out;
         }
 
         .btn,
